<resources>

    <!-- Action bar drawer toggle strings -->
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="app_name">Lucerna</string>
    <string name="error_message">Algo de errado aconteceu, verifique a sua conexão.</string>
    <string name="movie_details">Detalhes do Filme</string>
    <string name="the_movie_db_api_key">02e7ea83e252923ae63e50b78d3c7e2c</string>
    <string name="year_label">Ano: </string>
    <string name="btn_visualize_movie_details_text">Ver Mais</string>
    <string name="no_overview_text">Ops! Parece não haver sinopse para este filme. Pedimos desculpa!</string>

    <!-- Strings for each type of genre -->
    <string name="action_genre_text">Ação</string>
    <string name="adventure_genre_text">Aventura</string>
    <string name="animation_genre_text">Animação</string>
    <string name="comedy_genre_text">Comédia</string>
    <string name="crime_genre_text">Crime</string>
    <string name="documentary_genre_text">Documentário</string>
    <string name="drama_genre_text">Drama</string>
    <string name="family_genre_text">Família</string>
    <string name="horror_genre_text">Horror</string>
    <string name="music_genre_text">Música</string>
    <string name="romance_genre_text">Romance</string>
    <string name="science_fiction_genre_text">Ficção Científica</string>
    <string name="thriller_genre_text">Thriller</string>
    <string name="war_genre_text">Guerra</string>

    <string name="action_favorite_text">Favoritar</string>
    <string name="movie_favorited_text">Este filme foi adicionado aos favoritos</string>
    <string name="movie_unfavorited_text">Este filme foi removido dos seus favoritos</string>

    <string name="action_movies_category">Filmes de Ação</string>
    <string name="drama_movies_category">Filmes de Drama</string>
    <string name="horror_movies_category">Filmes de Horror</string>
    <string name="science_fiction_movies_category">Filmes de Ficção Científica</string>
    <string name="login_email_hint">E-mail</string>
    <string name="login_password_hint">Palavra-passe</string>
    <string name="login_button_text">Login</string>
    <string name="invalid_email_error">E-mail inválido</string>
    <string name="empty_password_error">Escreva a palavra-passe</string>
    <string name="login_failure_message">O email ou palavra-passe estão incorretos</string>
    <string name="network_failure_message">Não há conexão à rede</string>
    <string name="login_wait_text">Autenticando usuário...</string>
    <string name="registration_link_text">Não tens conta? Inscreva-se.</string>
    <string name="registration_email_hint">Seu e-mail</string>
    <string name="registration_password_hint">Escreva a palavra-passe</string>
    <string name="registration_password_confirmation_hint">Confirme a palavra-passe</string>
    <string name="name_hint">Seu nome</string>
    <string name="last_name_hint">Sobrenome</string>
    <string name="register_text">Registar</string>
    <string name="login_link_text">Já estás inscrito? Entre com a sua conta.</string>
    <string name="empty_name_field_error">Escreva o seu nome</string>
    <string name="passwords_not_matched_error">Esta palavra-passe não coincide com a anterior</string>
    <string name="email_already_in_use_error">O email que especificou já está em uso.</string>
    <string name="registration_wait_text">Efetuando registo...</string>
    <string name="not_existent_account_message">A conta de email não está registada.</string>
    <string name="account_disabled_message">Sua conta foi desativada</string>
    <string name="unknown_failure_message">Ocorreu um erro desconhecido</string>
    <string name="profile_picture_change_description">Toque para mudar sua foto de perfil</string>
    <string name="proceed_button_text">Prosseguir</string>
    <string name="no_application_to_open_image">Nenhuma aplicação encontrada para selecionar a imagem</string>
    <string name="picture_upload_error_text">Não foi possível fazer o upload desta imagem</string>
    <string name="picture_dowload_error_text">Não foi possível descarregar a sua foto de perfil</string>
    <string name="picture_not_existent_error">A fotografia selecionada foi movida ou apagada</string>
    <string name="popular_movies_text">Filmes populares</string>
    <string name="favorited_movies_text">Filmes favoritados</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
